Reduce Environment group font size to 11px. Fix tooltlip alignment on [H[2J

--- a/src/vs/workbench/contrib/positronEnvironment/browser/components/environmentVariableGroup.css
+++ b/src/vs/workbench/contrib/positronEnvironment/browser/components/environmentVariableGroup.css
@@ -6,6 +6,7 @@
 	display: flex;
 	border: none;
 	padding: 0 8px;
+	font-size: 11px;
 	align-items: center;
 	box-sizing: border-box; /* Draw the borders inside the box. */
 	text-transform: uppercase;
